; ModuleID = '/home/carl/AnghaBench/esp-idf/components/app_update/test/extr_test_switch_ota.c_test_flow3.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/app_update/test/extr_test_switch_ota.c_test_flow3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@boot_count = common dso_local global i32 0, align 4
@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"boot count %d\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"Factory\00", align 1
@ESP_PARTITION_SUBTYPE_APP_FACTORY = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [5 x i8] c"OTA0\00", align 1
@ESP_PARTITION_SUBTYPE_APP_OTA_0 = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [5 x i8] c"OTA1\00", align 1
@ESP_PARTITION_SUBTYPE_APP_OTA_1 = common dso_local global i32 0, align 4
@CORR_CRC_2_SECTOR_OTA_DATA = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [17 x i8] c"Unexpected stage\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_flow3 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_flow3() #0 {
  %1 = alloca %struct.TYPE_4__*, align 8
  %2 = load i32, i32* @boot_count, align 4
  %3 = add nsw i32 %2, 1
  store i32 %3, i32* @boot_count, align 4
  %4 = load i32, i32* @TAG, align 4
  %5 = load i32, i32* @boot_count, align 4
  %6 = call i32 (i32, i8*, ...) @ESP_LOGI(i32 %4, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 %5)
  %7 = call %struct.TYPE_4__* (...) @get_running_firmware()
  store %struct.TYPE_4__* %7, %struct.TYPE_4__** %1, align 8
  %8 = load i32, i32* @boot_count, align 4
  switch i32 %8, label %52 [
    i32 2, label %9
    i32 3, label %18
    i32 4, label %28
    i32 5, label %43
  ]

9:                                                ; preds = %0
  %10 = load i32, i32* @TAG, align 4
  %11 = call i32 (i32, i8*, ...) @ESP_LOGI(i32 %10, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0))
  %12 = load i32, i32* @ESP_PARTITION_SUBTYPE_APP_FACTORY, align 4
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @TEST_ASSERT_EQUAL(i32 %12, i32 %15)
  %17 = call i32 (...) @copy_current_app_to_next_part_and_reboot()
  br label %55

18:                                               ; preds = %0
  %19 = load i32, i32* @TAG, align 4
  %20 = call i32 (i32, i8*, ...) @ESP_LOGI(i32 %19, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0))
  %21 = load i32, i32* @ESP_PARTITION_SUBTYPE_APP_OTA_0, align 4
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @TEST_ASSERT_EQUAL(i32 %21, i32 %24)
  %26 = call i32 (...) @mark_app_valid()
  %27 = call i32 (...) @copy_current_app_to_next_part_and_reboot()
  br label %55

28:                                               ; preds = %0
  %29 = load i32, i32* @TAG, align 4
  %30 = call i32 (i32, i8*, ...) @ESP_LOGI(i32 %29, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i64 0, i64 0))
  %31 = load i32, i32* @ESP_PARTITION_SUBTYPE_APP_OTA_1, align 4
  %32 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = call i32 @TEST_ASSERT_EQUAL(i32 %31, i32 %34)
  %36 = call i32 (...) @mark_app_valid()
  %37 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %38 = call i32 (...) @get_next_update_partition()
  %39 = call i32 @copy_current_app_to_next_part(%struct.TYPE_4__* %37, i32 %38)
  %40 = load i32, i32* @CORR_CRC_2_SECTOR_OTA_DATA, align 4
  %41 = call i32 @corrupt_ota_data(i32 %40)
  %42 = call i32 (...) @reboot_as_deep_sleep()
  br label %55

43:                                               ; preds = %0
  %44 = load i32, i32* @TAG, align 4
  %45 = call i32 (i32, i8*, ...) @ESP_LOGI(i32 %44, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0))
  %46 = load i32, i32* @ESP_PARTITION_SUBTYPE_APP_OTA_0, align 4
  %47 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %48 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %47, i32 0, i32 0
  %49 = load i32, i32* %48, align 4
  %50 = call i32 @TEST_ASSERT_EQUAL(i32 %46, i32 %49)
  %51 = call i32 (...) @erase_ota_data()
  br label %55

52:                                               ; preds = %0
  %53 = call i32 (...) @erase_ota_data()
  %54 = call i32 @TEST_FAIL_MESSAGE(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.4, i64 0, i64 0))
  br label %55

55:                                               ; preds = %52, %43, %28, %18, %9
  ret void
}

declare dso_local i32 @ESP_LOGI(i32, i8*, ...) #1

declare dso_local %struct.TYPE_4__* @get_running_firmware(...) #1

declare dso_local i32 @TEST_ASSERT_EQUAL(i32, i32) #1

declare dso_local i32 @copy_current_app_to_next_part_and_reboot(...) #1

declare dso_local i32 @mark_app_valid(...) #1

declare dso_local i32 @copy_current_app_to_next_part(%struct.TYPE_4__*, i32) #1

declare dso_local i32 @get_next_update_partition(...) #1

declare dso_local i32 @corrupt_ota_data(i32) #1

declare dso_local i32 @reboot_as_deep_sleep(...) #1

declare dso_local i32 @erase_ota_data(...) #1

declare dso_local i32 @TEST_FAIL_MESSAGE(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
